--- a/main.html
+++ b/main.html
@@ -4,19 +4,25 @@
   </head>
   <body>
 	<!-- Write your code here -->
-	<div class="all">
+	<div class="container">
 		<div class="left">
-			<img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
-			<p>Facebook helps you connect and share with the people in your life.</p>
+			<img src="" alt="Fb Logo"/>
+			<p>Facebook helps you connect and 
+			share with the people in your life.</p>
 		</div>
-		<div class="right" >
+		<div class="right">
 			<form>
-				<input type="text" id="email"  placeholder="Email address or phone number">
-				<input type="password"  id="password"  placeholder="Password">
-				<button  class="btn" type="submit">Log in</button>
-				<a href="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg"  class="anc">Forgotten account?</a>
+				<div>
+					<input id="email" type='text' placeholder="Email address or phone number">
+				</div>
+				<div>
+					<input id="password" type='password' placeholder="Password" >
+				</div>
+				<input type="submit" class="signup" id="loginBtn" value="Log in">
+				<a href="/recover/initiate">Forgotten account?</a>
+				<hr>
+				<button><a class="create" href="/reg/initiate">Create new account</a></button>
 			</form>
-			<button class="signup">Create new account</button>
 		</div>
 	</div>
   </body>
